# understanding-cnn-from-scratch

./: .gitignore  README.md  pyproject.toml
excalidraw/: cnn-forward.excalidraw  pooling.excalidraw  softmax.excalidraw
notebooks/: burmese_digits_cnn_pytorch.ipynb
np-impl/: convolution.ipynb
