[project]
name = "cnn"
version = "0.1.0"
description = "Educational CNN implementation for recognizing handwritten Burmese digits, with visualization and Grad-CAM, accompanying a detailed Medium article."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
